# Fidesys

./: CMakeLists.txt
include/: Constraint.h  Element.h  FEMSolver.h  ProblemSetup.h
result/: input_check.txt  output.txt  read_sigmaXX.ipynb  read_u_sigma_mises.ipynb  sigmaXX.txt
src/: FEMSolver.cpp  ProblemSetup.cpp  main.cpp
